docs: update docs to 0.4.0